(Update) => Update Core And Function

--- a/QueseZen/package.json
+++ b/QueseZen/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --open --port 4201",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "ng build -aot -op ../Webapp -bh /quesezen/ -dop false --watch"
   },
   "private": true,
   "dependencies": {
@@ -24,6 +25,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
+    "sweetalert2": "^8.7.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
