--- a/QueseZen/.gitignore
+++ b/QueseZen/.gitignore
@@ -23,6 +23,10 @@ speed-measure-plugin.json
 .settings/
 *.sublime-workspace
 
+# Visual Studio
+/.vs
+.vs/*
+
 # IDE - VSCode
 .vscode/*
 !.vscode/settings.json
